--- a/index.html
+++ b/index.html
@@ -135,179 +135,177 @@
   </style>
 </head>
 <body>
+
+<div style="text-align:center; margin-bottom:20px;">
+  <button id="prevWeek" class="nav-button">← Previous Week</button>
+  <button id="nextWeek" class="nav-button">Next Week →</button>
+</div>
+
+<div id="booking-app" class="calendar-grid"></div>
+
+<div class="modal-overlay" id="modalOverlay"></div>
+<form class="modal-form" id="bookingForm">
+  <h2>Free Estimate</h2>
+  <p>Please fill out the form below to schedule your free pest control estimate.</p>
+  <div class="form-row">
+    <input type="text" placeholder="First Name *" id="firstName" required>
+    <input type="text" placeholder="Last Name *" id="lastName" required>
+  </div>
+  <div class="form-row">
+    <input type="email" placeholder="Email Address *" id="email" required>
+    <input type="tel" placeholder="Phone Number *" id="phone" required>
+  </div>
+  <div class="form-row">
+    <input type="text" placeholder="Street Address *" id="address" required>
+    <input type="text" placeholder="City *" id="city" required>
+  </div>
+  <input type="text" placeholder="Zip Code *" id="zip" required>
+  <input type="text" placeholder="Pest Concern *" id="concern" required>
+  <p><strong>Selected Appointment:</strong> <span id="confirmDateTime"></span></p>
+  <input type="hidden" id="formDate">
+  <input type="hidden" id="formWindow">
+  <button type="submit">Book Time</button>
+</form>
+
+<div class="confirmation-message" id="confirmationMessage"></div>
+<div class="error-message" id="errorMessage">
+  Something went wrong. Please <a href="sms:5152576601?body=Hey, I was trying to book online but hit a snag. Can you help?">text us</a> at <strong>515-257-6601</strong>.
+</div>
+
 <script>
+  const WEB_APP_URL = "https://creed-pest-proxy.onrender.com/";
+  const bookingApp = document.getElementById("booking-app");
+  const form = document.getElementById("bookingForm");
+  const overlay = document.getElementById("modalOverlay");
+  const confirmationMessage = document.getElementById("confirmationMessage");
+  const errorMessage = document.getElementById("errorMessage");
+  const confirmDateTime = document.getElementById("confirmDateTime");
+  const formDate = document.getElementById("formDate");
+  const formWindow = document.getElementById("formWindow");
+
+  let availability = [];
+  let currentOffset = 0;
+
   const now = new Date();
   const nowCentral = new Date(now.toLocaleString("en-US", { timeZone: "America/Chicago" }));
 
-  function isFutureSlot(dateStr, slot) {
-    const [startHour] = slot.start;
-    const slotStart = new Date(dateStr);
-    slotStart.setHours(startHour, 0, 0, 0);
-    return slotStart > nowCentral;
-  }
-</script>
-
-  <div style="text-align:center; margin-bottom:20px;">
-    <button id="prevWeek" class="nav-button">← Previous Week</button>
-    <button id="nextWeek" class="nav-button">Next Week →</button>
-  </div>
-
-  <div id="booking-app" class="calendar-grid"></div>
-
-  <div class="modal-overlay" id="modalOverlay"></div>
-  <form class="modal-form" id="bookingForm">
-    <h2>Free Estimate</h2>
-    <p>Please fill out the form below to schedule your free pest control estimate.</p>
-    <div class="form-row">
-      <input type="text" placeholder="First Name *" id="firstName" required>
-      <input type="text" placeholder="Last Name *" id="lastName" required>
-    </div>
-    <div class="form-row">
-      <input type="email" placeholder="Email Address *" id="email" required>
-      <input type="tel" placeholder="Phone Number *" id="phone" required>
-    </div>
-    <div class="form-row">
-      <input type="text" placeholder="Street Address *" id="address" required>
-      <input type="text" placeholder="City *" id="city" required>
-    </div>
-    <input type="text" placeholder="Zip Code *" id="zip" required>
-    <input type="text" placeholder="Pest Concern *" id="concern" required>
-    <p><strong>Selected Appointment:</strong> <span id="confirmDateTime"></span></p>
-    <input type="hidden" id="formDate">
-    <input type="hidden" id="formWindow">
-    <button type="submit">Book Time</button>
-  </form>
-
-  <div class="confirmation-message" id="confirmationMessage"></div>
-  <div class="error-message" id="errorMessage">
-    Something went wrong. Please <a href="sms:5152576601?body=Hey, I was trying to book online but hit a snag. Can you help?">text us</a> at <strong>515-257-6601</strong>.
-  </div>
-
-  <script>
-    const WEB_APP_URL = "https://creed-pest-proxy.onrender.com/"; // Your Render proxy URL
-    const bookingApp = document.getElementById("booking-app");
-    const form = document.getElementById("bookingForm");
-    const overlay = document.getElementById("modalOverlay");
-    const confirmationMessage = document.getElementById("confirmationMessage");
-    const errorMessage = document.getElementById("errorMessage");
-    const confirmDateTime = document.getElementById("confirmDateTime");
-    const formDate = document.getElementById("formDate");
-    const formWindow = document.getElementById("formWindow");
-
-    let availability = [];
-    let currentOffset = 0;
-
-    async function fetchAvailability() {
-      try {
-        const response = await fetch(WEB_APP_URL);
-        availability = await response.json();
-        availability = availability.filter(a => {
-          const d = new Date(a.date);
-          return d.getDay() !== 0 && d.getDay() !== 6;
-        });
-        renderCalendar();
-      } catch (err) {
-        bookingApp.innerHTML = '<p style="color:red;">Could not load availability.</p>';
-      }
+  async function fetchAvailability() {
+    try {
+      const response = await fetch(WEB_APP_URL);
+      availability = await response.json();
+      availability = availability.filter(a => {
+        const d = new Date(a.date);
+        return d.getDay() !== 0 && d.getDay() !== 6;
+      });
+      renderCalendar();
+    } catch (err) {
+      bookingApp.innerHTML = '<p style="color:red;">Could not load availability.</p>';
     }
+  }
 
-    function renderCalendar() {
-      bookingApp.innerHTML = "";
-      const visibleDates = availability.slice(currentOffset, currentOffset + 7);
+  function renderCalendar() {
+    bookingApp.innerHTML = "";
+    const visibleDates = availability.slice(currentOffset, currentOffset + 7);
 
-      for (let entry of visibleDates) {
-        const dateObj = new Date(entry.date);
-        const label = (dateObj.toDateString() === new Date().toDateString())
-          ? `Today, ${dateObj.toLocaleDateString(undefined, { weekday: "long", month: "short", day: "numeric" })}`
-          : (dateObj.toDateString() === new Date(new Date().setDate(new Date().getDate() + 1)).toDateString())
-          ? `Tomorrow, ${dateObj.toLocaleDateString(undefined, { weekday: "long", month: "short", day: "numeric" })}`
-          : dateObj.toLocaleDateString(undefined, { weekday: "long", month: "short", day: "numeric" });
+    for (let entry of visibleDates) {
+      const dateObj = new Date(entry.date);
+      const isToday = dateObj.toDateString() === nowCentral.toDateString();
 
-        const container = document.createElement("div");
-        container.className = "calendar-day";
+      const label = isToday
+        ? `Today, ${dateObj.toLocaleDateString(undefined, { weekday: "long", month: "short", day: "numeric" })}`
+        : dateObj.toLocaleDateString(undefined, { weekday: "long", month: "short", day: "numeric" });
 
-        const labelDiv = document.createElement("div");
-        labelDiv.className = "day-label";
-        labelDiv.textContent = label;
-        container.appendChild(labelDiv);
+      const container = document.createElement("div");
+      container.className = "calendar-day";
 
-        for (let slot of entry.windows) {
+      const labelDiv = document.createElement("div");
+      labelDiv.className = "day-label";
+      labelDiv.textContent = label;
+      container.appendChild(labelDiv);
+
+      for (let slot of entry.windows) {
+        const [startHour] = slot.start;
+        const slotTime = new Date(entry.date);
+        slotTime.setHours(startHour, 0, 0, 0);
+
+        if (slotTime > nowCentral) {
           const btn = document.createElement("button");
           btn.className = "bubble-button";
           btn.textContent = slot.label;
           btn.onclick = () => openForm(entry.date, slot.label);
           container.appendChild(btn);
         }
-
-        bookingApp.appendChild(container);
       }
+
+      if (container.children.length > 1) bookingApp.appendChild(container);
     }
+  }
 
-    document.getElementById("prevWeek").onclick = () => {
-      if (currentOffset >= 7) {
-        currentOffset -= 7;
-        renderCalendar();
-      }
-    };
-
-    document.getElementById("nextWeek").onclick = () => {
-      currentOffset += 7;
+  document.getElementById("prevWeek").onclick = () => {
+    if (currentOffset >= 7) {
+      currentOffset -= 7;
       renderCalendar();
-    };
-
-    function openForm(dateStr, windowLabel) {
-      const readable = new Date(dateStr).toLocaleDateString(undefined, { weekday: "long", month: "short", day: "numeric" });
-      confirmDateTime.textContent = `${readable} between ${windowLabel}`;
-      formDate.value = dateStr;
-      formWindow.value = windowLabel;
-      overlay.style.display = "block";
-      form.style.display = "block";
     }
+  };
 
-    overlay.onclick = () => {
-      overlay.style.display = "none";
-      form.style.display = "none";
+  document.getElementById("nextWeek").onclick = () => {
+    currentOffset += 7;
+    renderCalendar();
+  };
+
+  function openForm(dateStr, windowLabel) {
+    const readable = new Date(dateStr).toLocaleDateString(undefined, { weekday: "long", month: "short", day: "numeric" });
+    confirmDateTime.textContent = `${readable} between ${windowLabel}`;
+    formDate.value = dateStr;
+    formWindow.value = windowLabel;
+    overlay.style.display = "block";
+    form.style.display = "block";
+  }
+
+  overlay.onclick = () => {
+    overlay.style.display = "none";
+    form.style.display = "none";
+  };
+
+  form.onsubmit = async (e) => {
+    e.preventDefault();
+    const formData = {
+      firstName: document.getElementById("firstName").value,
+      lastName: document.getElementById("lastName").value,
+      email: document.getElementById("email").value,
+      phone: document.getElementById("phone").value,
+      address: document.getElementById("address").value,
+      city: document.getElementById("city").value,
+      zip: document.getElementById("zip").value,
+      concern: document.getElementById("concern").value,
+      date: formDate.value,
+      timeWindow: formWindow.value
     };
 
-    form.onsubmit = async (e) => {
-      e.preventDefault();
-      const formData = {
-        firstName: document.getElementById("firstName").value,
-        lastName: document.getElementById("lastName").value,
-        email: document.getElementById("email").value,
-        phone: document.getElementById("phone").value,
-        address: document.getElementById("address").value,
-        city: document.getElementById("city").value,
-        zip: document.getElementById("zip").value,
-        concern: document.getElementById("concern").value,
-        date: formDate.value,
-        timeWindow: formWindow.value
-      };
+    try {
+      const response = await fetch(WEB_APP_URL, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(formData)
+      });
 
-      try {
-        const response = await fetch(WEB_APP_URL, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(formData)
-        });
-
-        const result = await response.json();
-        if (result.success) {
-          confirmationMessage.textContent = `Thank you! Your appointment is set for ${formData.date} between ${formData.timeWindow}.`;
-          confirmationMessage.style.display = "block";
-          overlay.style.display = "none";
-          form.style.display = "none";
-        } else {
-          throw new Error("Server returned error");
-        }
-      } catch (err) {
-        form.style.display = "none";
+      const result = await response.json();
+      if (result.success) {
+        confirmationMessage.textContent = `Thank you! Your appointment is set for ${formData.date} between ${formData.timeWindow}.`;
+        confirmationMessage.style.display = "block";
         overlay.style.display = "none";
-        errorMessage.style.display = "block";
+        form.style.display = "none";
+      } else {
+        throw new Error("Server returned error");
       }
-    };
+    } catch (err) {
+      form.style.display = "none";
+      overlay.style.display = "none";
+      errorMessage.style.display = "block";
+    }
+  };
 
-    fetchAvailability();
-  </script>
+  fetchAvailability();
+</script>
 </body>
 </html>
