--- a/index.html
+++ b/index.html
@@ -2,90 +2,62 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Creed Pest Control Booking</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Creed Pest Booking</title>
   <style>
     body {
-      font-family: 'Inter', sans-serif;
-      margin: 0;
-      background-color: #f3f4f6;
-      color: #111827;
-    }
-    header {
-      background-color: #32cd32;
-      padding: 2rem;
-      text-align: center;
-      color: white;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2rem;
-    }
-    .notice {
-      max-width: 800px;
-      margin: 1rem auto;
-      padding: 1rem;
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      font-size: 0.95rem;
+      font-family: Arial, sans-serif;
     }
     .calendar-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap: 1rem;
-      max-width: 1200px;
-      margin: 1rem auto;
-      padding: 0 1rem;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 16px;
+      justify-content: center;
     }
     .calendar-day {
-      background: white;
-      padding: 1rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      padding: 10px;
+      min-width: 200px;
+      background: #f9f9f9;
     }
     .day-label {
-      font-weight: 600;
-      margin-bottom: 0.5rem;
+      font-weight: bold;
+      margin-bottom: 8px;
     }
     .bubble-button {
       display: block;
       width: 100%;
-      padding: 0.5rem;
-      margin-bottom: 0.5rem;
+      padding: 8px;
+      margin-bottom: 6px;
       border: none;
-      border-radius: 9999px;
+      border-radius: 20px;
       background-color: #32cd32;
       color: white;
-      font-weight: 600;
       cursor: pointer;
-      transition: background-color 0.2s;
+      font-size: 14px;
     }
     .bubble-button:hover {
-      background-color: #2ca02c;
-    }
-    .nav-buttons {
-      display: flex;
-      justify-content: center;
-      margin: 1rem 0;
+      background-color: #888;
     }
     .nav-button {
-      background: #444;
+      font-size: 16px;
+      padding: 8px 16px;
+      margin: 0 5px;
+      background-color: #444;
       color: white;
       border: none;
-      padding: 0.5rem 1rem;
-      margin: 0 0.5rem;
-      border-radius: 6px;
+      border-radius: 4px;
       cursor: pointer;
     }
     .modal-overlay {
       display: none;
       position: fixed;
-      inset: 0;
-      background: rgba(0,0,0,0.5);
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background-color: rgba(0, 0, 0, 0.7);
       z-index: 999;
     }
     .modal-form {
@@ -95,183 +67,216 @@
       left: 50%;
       transform: translate(-50%, -50%);
       background: white;
-      padding: 2rem;
+      padding: 20px;
       border-radius: 10px;
       z-index: 1000;
       width: 90%;
       max-width: 600px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
     }
     .form-row {
       display: flex;
-      flex-wrap: wrap;
-      gap: 0.5rem;
+      gap: 10px;
+      margin-bottom: 10px;
     }
     .form-row input, .form-row textarea {
-      flex: 1 1 100%;
-      padding: 0.75rem;
-      font-size: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 6px;
+      flex: 1;
+      padding: 8px;
+      font-family: Arial, sans-serif;
+      font-size: 14px;
     }
-    .form-row input:focus, .form-row textarea:focus {
-      border-color: #32cd32;
-      outline: none;
-    }
-    @media (min-width: 500px) {
-      .form-row input, .form-row textarea {
-        flex: 1 1 calc(50% - 0.5rem);
-      }
-    }
-    .submit-button {
-      margin-top: 1rem;
-      background-color: #32cd32;
-      color: white;
-      padding: 0.75rem 1.5rem;
-      border: none;
-      border-radius: 9999px;
-      font-size: 1rem;
-      font-weight: 600;
-      cursor: pointer;
-    }
-    .submit-button:hover {
-      background-color: #2ca02c;
+    .modal-form input, .modal-form textarea {
+      width: 100%;
+      margin-bottom: 10px;
+      font-family: Arial, sans-serif;
     }
     .confirmation-message, .error-message {
       display: none;
       text-align: center;
-      margin-top: 1.5rem;
-      padding: 1rem;
-      font-size: 1rem;
+      margin-top: 20px;
+      font-family: Arial, sans-serif;
     }
-    .confirmation-message {
-      color: green;
+    button[type="submit"] {
+      background-color: #32cd32;
+      color: white;
+      border: none;
+      border-radius: 20px;
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
+      font-family: Arial, sans-serif;
     }
-    .error-message {
-      color: red;
+    button[type="submit"]:hover {
+      background-color: #888;
+      color: white;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Creed Pest Control Online Booking</h1>
-  </header>
-  <div class="notice">
-    <p><strong>Free Estimate Policy:</strong> We offer no-obligation free estimates for customers in Ames, Nevada, Boone, and Huxley. Customers outside this area, please email <a href="mailto:office@creedpest.com">office@creedpest.com</a>.</p>
-    <p>Please ensure your time zone is set to Central Time when selecting a time.</p>
-  </div>
-  <div class="nav-buttons">
+
+  <div style="text-align:center; margin-bottom:20px;">
     <button id="prevWeek" class="nav-button">← Previous Week</button>
     <button id="nextWeek" class="nav-button">Next Week →</button>
   </div>
+
   <div id="booking-app" class="calendar-grid"></div>
 
   <div class="modal-overlay" id="modalOverlay"></div>
   <form class="modal-form" id="bookingForm">
-    <h2>Confirm Appointment</h2>
-    <p><strong>Selected Time:</strong> <span id="confirmDateTime"></span></p>
+    <h2>Free Estimate</h2>
+    <p>Please fill out the form below to schedule your free pest control estimate.</p>
     <div class="form-row">
       <input type="text" placeholder="First Name *" id="firstName" required>
       <input type="text" placeholder="Last Name *" id="lastName" required>
     </div>
     <div class="form-row">
-      <input type="email" placeholder="Email *" id="email" required>
-      <input type="tel" placeholder="Phone *" id="phone" required>
+      <input type="email" placeholder="Email Address *" id="email" required>
+      <input type="tel" placeholder="Phone Number *" id="phone" required>
     </div>
     <div class="form-row">
       <input type="text" placeholder="Street Address *" id="address" required>
       <input type="text" placeholder="City *" id="city" required>
     </div>
     <input type="text" placeholder="Zip Code *" id="zip" required>
-    <textarea placeholder="Pest Concern *" id="concern" required></textarea>
+    <input type="text" placeholder="Pest Concern *" id="concern" required>
+    <p><strong>Selected Appointment:</strong> <span id="confirmDateTime"></span></p>
     <input type="hidden" id="formDate">
     <input type="hidden" id="formWindow">
-    <button type="submit" class="submit-button">Book Appointment</button>
+    <button type="submit">Book Time</button>
   </form>
-  <div class="confirmation-message" id="confirmationMessage">Your appointment has been booked! We'll be in touch soon.</div>
-  <div class="error-message" id="errorMessage">Something went wrong. Please <a href="sms:5152576601">text us</a>.</div>
+
+  <div class="confirmation-message" id="confirmationMessage"></div>
+  <div class="error-message" id="errorMessage">
+    Something went wrong. Please <a href="sms:5152576601?body=Hey, I was trying to book online but hit a snag. Can you help?">text us</a> at <strong>515-257-6601</strong>.
+  </div>
 
   <script>
-    const app = document.getElementById("booking-app");
-    const overlay = document.getElementById("modalOverlay");
+    const WEB_APP_URL = "https://creed-pest-proxy.onrender.com/"; // Your Render proxy URL
+    const bookingApp = document.getElementById("booking-app");
     const form = document.getElementById("bookingForm");
-    const confirmText = document.getElementById("confirmDateTime");
-    const confirmation = document.getElementById("confirmationMessage");
-    const error = document.getElementById("errorMessage");
+    const overlay = document.getElementById("modalOverlay");
+    const confirmationMessage = document.getElementById("confirmationMessage");
+    const errorMessage = document.getElementById("errorMessage");
+    const confirmDateTime = document.getElementById("confirmDateTime");
+    const formDate = document.getElementById("formDate");
+    const formWindow = document.getElementById("formWindow");
 
-    fetch("https://creed-proxy.onrender.com/")
-      .then(res => res.json())
-      .then(data => {
-        data.forEach(day => {
-          const div = document.createElement("div");
-          div.className = "calendar-day";
+    let availability = [];
+    let currentOffset = 0;
 
-          const label = document.createElement("div");
-          label.className = "day-label";
-          label.textContent = new Date(day.date).toLocaleDateString("en-US", { weekday: "long", month: "short", day: "numeric" });
-
-          div.appendChild(label);
-
-          day.windows.forEach(window => {
-            const btn = document.createElement("button");
-            btn.className = "bubble-button";
-            btn.textContent = window.label;
-            btn.addEventListener("click", () => openForm(day.date, window.label));
-            div.appendChild(btn);
-          });
-
-          app.appendChild(div);
+    async function fetchAvailability() {
+      try {
+        const response = await fetch(WEB_APP_URL);
+        availability = await response.json();
+        availability = availability.filter(a => {
+          const d = new Date(a.date);
+          return d.getDay() !== 0 && d.getDay() !== 6;
         });
-      })
-      .catch(() => error.style.display = "block");
+        renderCalendar();
+      } catch (err) {
+        bookingApp.innerHTML = '<p style="color:red;">Could not load availability.</p>';
+      }
+    }
 
-    function openForm(date, window) {
-      confirmText.textContent = `${date} @ ${window}`;
-      document.getElementById("formDate").value = date;
-      document.getElementById("formWindow").value = window;
+    function renderCalendar() {
+      bookingApp.innerHTML = "";
+      const visibleDates = availability.slice(currentOffset, currentOffset + 7);
+
+      for (let entry of visibleDates) {
+        const dateObj = new Date(entry.date);
+        const label = (dateObj.toDateString() === new Date().toDateString())
+          ? `Today, ${dateObj.toLocaleDateString(undefined, { weekday: "long", month: "short", day: "numeric" })}`
+          : (dateObj.toDateString() === new Date(new Date().setDate(new Date().getDate() + 1)).toDateString())
+          ? `Tomorrow, ${dateObj.toLocaleDateString(undefined, { weekday: "long", month: "short", day: "numeric" })}`
+          : dateObj.toLocaleDateString(undefined, { weekday: "long", month: "short", day: "numeric" });
+
+        const container = document.createElement("div");
+        container.className = "calendar-day";
+
+        const labelDiv = document.createElement("div");
+        labelDiv.className = "day-label";
+        labelDiv.textContent = label;
+        container.appendChild(labelDiv);
+
+        for (let slot of entry.windows) {
+          const btn = document.createElement("button");
+          btn.className = "bubble-button";
+          btn.textContent = slot.label;
+          btn.onclick = () => openForm(entry.date, slot.label);
+          container.appendChild(btn);
+        }
+
+        bookingApp.appendChild(container);
+      }
+    }
+
+    document.getElementById("prevWeek").onclick = () => {
+      if (currentOffset >= 7) {
+        currentOffset -= 7;
+        renderCalendar();
+      }
+    };
+
+    document.getElementById("nextWeek").onclick = () => {
+      currentOffset += 7;
+      renderCalendar();
+    };
+
+    function openForm(dateStr, windowLabel) {
+      const readable = new Date(dateStr).toLocaleDateString(undefined, { weekday: "long", month: "short", day: "numeric" });
+      confirmDateTime.textContent = `${readable} between ${windowLabel}`;
+      formDate.value = dateStr;
+      formWindow.value = windowLabel;
       overlay.style.display = "block";
       form.style.display = "block";
     }
 
-    overlay.addEventListener("click", () => {
+    overlay.onclick = () => {
       overlay.style.display = "none";
       form.style.display = "none";
-    });
+    };
 
-    form.addEventListener("submit", async e => {
+    form.onsubmit = async (e) => {
       e.preventDefault();
-      confirmation.style.display = "none";
-      error.style.display = "none";
-      const payload = {
-        firstName: form.firstName.value,
-        lastName: form.lastName.value,
-        email: form.email.value,
-        phone: form.phone.value,
-        address: form.address.value,
-        city: form.city.value,
-        zip: form.zip.value,
-        concern: form.concern.value,
-        date: form.formDate.value,
-        timeWindow: form.formWindow.value
+      const formData = {
+        firstName: document.getElementById("firstName").value,
+        lastName: document.getElementById("lastName").value,
+        email: document.getElementById("email").value,
+        phone: document.getElementById("phone").value,
+        address: document.getElementById("address").value,
+        city: document.getElementById("city").value,
+        zip: document.getElementById("zip").value,
+        concern: document.getElementById("concern").value,
+        date: formDate.value,
+        timeWindow: formWindow.value
       };
 
       try {
-        const res = await fetch("https://creed-proxy.onrender.com/", {
+        const response = await fetch(WEB_APP_URL, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(payload)
+          body: JSON.stringify(formData)
         });
-        const json = await res.json();
-        if (json.success) {
-          confirmation.style.display = "block";
-          form.reset();
+
+        const result = await response.json();
+        if (result.success) {
+          confirmationMessage.textContent = `Thank you! Your appointment is set for ${formData.date} between ${formData.timeWindow}.`;
+          confirmationMessage.style.display = "block";
           overlay.style.display = "none";
           form.style.display = "none";
-        } else throw new Error();
-      } catch {
-        error.style.display = "block";
+        } else {
+          throw new Error("Server returned error");
+        }
+      } catch (err) {
+        form.style.display = "none";
+        overlay.style.display = "none";
+        errorMessage.style.display = "block";
       }
-    });
+    };
+
+    fetchAvailability();
   </script>
+</body>
+</html>
+
 </body>
 </html>
